--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ EXPO_PUBLIC_FIREBASE_PROJECT_ID=fitmindai-7aa0b
 EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=fitmindai-7aa0b.firebasestorage.app
 EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123730796969
 EXPO_PUBLIC_FIREBASE_APP_ID=1:123730796969:web:87471e023de59610f224b8s
+
+# Exercise API (ExerciseDB via RapidAPI)
+# free API key from: https://rapidapi.com/justin-WFnsXH_t6/api/exercisedb
+EXPO_PUBLIC_EXERCISE_API_KEY=62109617e4msh37e3e51bcf1326dp1a2f19jsn0db9b953d395
