--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-EXPO_PUBLIC_FIREBASE_API_KEY=AIzaSyB_3YVnuh4H3bIDMHakbC5kBCmhbvVaRDg
-EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=fitmindai-7aa0b.firebaseapp.com
-EXPO_PUBLIC_FIREBASE_PROJECT_ID=fitmindai-7aa0b
-EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=fitmindai-7aa0b.firebasestorage.app
-EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123730796969
-EXPO_PUBLIC_FIREBASE_APP_ID=1:123730796969:web:87471e023de59610f224b8s
+EXPO_PUBLIC_FIREBASE_API_KEY=AIzaSyCIRiAOhhREwVA1UJ04I6u_7Cei60qB5Mw
+EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=fitmindai-5e424.firebaseapp.com
+EXPO_PUBLIC_FIREBASE_PROJECT_ID=fitmindai-5e424
+EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=fitmindai-5e424.firebasestorage.app
+EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=870868575614
+EXPO_PUBLIC_FIREBASE_APP_ID=1:870868575614:web:84c7aea404ca630d80dbf2f
 
 # Exercise API (ExerciseDB via RapidAPI)
 # free API key from: https://rapidapi.com/justin-WFnsXH_t6/api/exercisedb
