added workout plan

--- a/.env
+++ b/.env
@@ -8,3 +8,33 @@ EXPO_PUBLIC_FIREBASE_APP_ID=1:870868575614:web:84c7aea404ca630d80dbf2f
 # Exercise API (ExerciseDB via RapidAPI)
 # free API key from: https://rapidapi.com/justin-WFnsXH_t6/api/exercisedb
 EXPO_PUBLIC_EXERCISEDB_API_KEY=62109617e4msh37e3e51bcf1326dp1a2f19jsn0db9b953d395
+
+OPENAI_API_KEY=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
+
+# Recommended for most uses
+DATABASE_URL=postgres://neondb_owner:npg_oWkBSQV1zbv6@ep-patient-cloud-ad10vj79-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require
+
+# For uses requiring a connection without pgbouncer
+DATABASE_URL_UNPOOLED=postgresql://neondb_owner:npg_oWkBSQV1zbv6@ep-patient-cloud-ad10vj79.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require
+
+# Parameters for constructing your own connection string
+PGHOST=ep-patient-cloud-ad10vj79-pooler.c-2.us-east-1.aws.neon.tech
+PGHOST_UNPOOLED=ep-patient-cloud-ad10vj79.c-2.us-east-1.aws.neon.tech
+PGUSER=neondb_owner
+PGDATABASE=neondb
+PGPASSWORD=npg_oWkBSQV1zbv6
+
+# Parameters for Vercel Postgres Templates
+POSTGRES_URL=postgres://neondb_owner:npg_oWkBSQV1zbv6@ep-patient-cloud-ad10vj79-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_URL_NON_POOLING=postgres://neondb_owner:npg_oWkBSQV1zbv6@ep-patient-cloud-ad10vj79.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_USER=neondb_owner
+POSTGRES_HOST=ep-patient-cloud-ad10vj79-pooler.c-2.us-east-1.aws.neon.tech
+POSTGRES_PASSWORD=npg_oWkBSQV1zbv6
+POSTGRES_DATABASE=neondb
+POSTGRES_URL_NO_SSL=postgres://neondb_owner:npg_oWkBSQV1zbv6@ep-patient-cloud-ad10vj79-pooler.c-2.us-east-1.aws.neon.tech/neondb
+POSTGRES_PRISMA_URL=postgres://neondb_owner:npg_oWkBSQV1zbv6@ep-patient-cloud-ad10vj79-pooler.c-2.us-east-1.aws.neon.tech/neondb?connect_timeout=15&sslmode=require
+
+# Neon Auth environment variables for Next.js
+NEXT_PUBLIC_STACK_PROJECT_ID=958cf6bd-0263-49d2-b434-ff44b73e6e87
+NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=pck_x8gdp5z7yrfk2543mrdd5wbwz6w4xwctp8yrhangacpdr
+STACK_SECRET_SERVER_KEY=ssk_eedg0wmvq2v44wpq02eqtcvnzdd9767hev0hybsaym4cr
