--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.0.0",
     "formik": "^2.4.6",
+    "openai": "^5.12.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
