--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
+    "@types/uuid": "^10.0.0",
     "@types/yup": "^0.29.14",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
